# ik_ros

./: README.md
ik_ros/: CMakeLists.txt  README.md  package.xml  setup.py
ik_ros/msg/: EXOTicaProblem.msg  EXOTicaSyncTf.msg  IKSolution.msg  RBDLProblem.msg  TracIKProblem.msg
ik_ros/scripts/: exotica_set_problem_node.py  ik_node.py  ik_setup.py  ik_setup_node.py  ik_solver_node.py  single_arm_exotica_effframe_node.py  tf_to_floatarray_node.py  trac_ik_node.py  trac_ik_set_problem_node.py
ik_ros/src/ik_ros/: exotica.py  ik.py  ik_interface.py  ik_node.py  ik_output.py  ik_setup_node.py  ik_solver_interfaces.py  ik_solver_node.py  ros_node.py  single_arm_exotica_effframe.py  trac_ik.py  trac_ik_setup.py
ik_ros/src/ik_ros/exotica/: interface.py  setup.py  setup_node.py
ik_ros/src/ik_ros/exotica_interface/: interface.py  setup_node.py
ik_ros/src/ik_ros/pybullet/: setup_node.py
ik_ros/src/ik_ros/pybullet_interface/: README.md  setup_node.py
ik_ros/src/ik_ros/rbdl/: README.md  interface.py  setup_node.py
ik_ros/src/ik_ros/rbdl_interface/: interface.py  setup_node.py
ik_ros/src/ik_ros/trac_ik/: interface.py  setup_node.py
ik_ros/src/ik_ros/trac_ik_interface/: interface.py  setup_node.py
ik_ros/srv/: EXOTica.srv  EXOTicaInfo.srv  JointNameOrder.srv  RBDL.srv  SolveIK.srv  ToggleIK.srv  TracIK.srv
ik_ros_examples/: CMakeLists.txt  package.xml  setup.py
ik_ros_examples/configs/: lwr.xml  lwr.yaml
ik_ros_examples/configs/kuka_lwr_exotica_example/: config.yaml  kuka_lwr.xml  kuka_lwr.yaml  lwr.srdf  lwr.urdf
ik_ros_examples/configs/kuka_lwr_pybullet_example/: config.yaml  ik_setup_config.yaml  kuka_lwr.yaml
ik_ros_examples/configs/kuka_lwr_rbdl_example/: ik_config.yaml  kuka_lwr.yaml
ik_ros_examples/configs/kuka_lwr_trac_ik_example/: config.yaml  kuka_lwr.xml  kuka_lwr.yaml  sphere.yaml
ik_ros_examples/launch/: kuka_lwr_exotica_example.launch  kuka_lwr_pybullet_example.launch  kuka_lwr_rbdl_example.launch  kuka_lwr_trac_ik_example.launch  lwr_exotica_example.launch  lwr_trac_ik_example.launch
ik_ros_examples/rviz/: kuka_lwr_example.rviz
ik_ros_examples/scripts/: figure_eight_node.py  run_example.py  run_kuka_lwr_exotica_example.py  run_kuka_lwr_trac_ik_example.py  run_lwr_trac_ik_example.py  trac_ik_example_node.py
ik_ros_examples/src/ik_ros_examples/: utils.py
