<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ik_ros_examples</name>
  <version>1.0.0</version>
  <description>The ik_ros_examples package</description>
  <maintainer email="c.mower@ed.ac.uk">Christopher E. Mower</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/cmower/ik_ros</url>
  <author email="c.mower@ed.ac.uk">Christopher E. Mower</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
</package>
